--- a/src/VizPOIAnalytics/index.css
+++ b/src/VizPOIAnalytics/index.css
@@ -86,7 +86,7 @@ label {
   padding: 14px;
   background: rgba(0, 0, 0, 0.8);
   color: #fff;
-  width: 330px;
+  width: 350px;
   font-size: 12px;
   z-index: 7;
   pointer-events: none;
@@ -111,7 +111,7 @@ label {
   line-height: 1.833;
   width: 250px;
   position: absolute;
-  top: 5vh;
+  top: 20px;
   left: 20px;
   z-index: 100;
   background: black;
@@ -125,8 +125,8 @@ label {
   line-height: 1.833;
   width: 300px;
   position: absolute;
-  top: 5vh;
-  left: calc(100vw - 22rem);
+  top: 20px;
+  right: 20px;
   z-index: 100;
   background: black;
   color: white;
@@ -225,10 +225,11 @@ label {
   }
   .tooltipStyle {
     position: absolute;
-    z-index: 1;
+    z-index: 100;
     top: 65px;
     transform: none !important;
     left: 2.5%;
+    width: 87.5%;
     max-width: none !important;
     border-radius: 4px;
   }
